--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Hongyu Yan"
 description              : &description "personal description"
 url                      : https://01yan.github.io/hyyan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "01Yan/01yan.github.io/hyyan.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
