--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "01Yan/hyyan.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "yan.png"
   name             : "Hongyu Yan"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
